fixed alignment of the task

--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -1,8 +1,7 @@
 .task {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
-	align-self: stretch;
+	align-items: flex-start;
 	justify-content: space-between;
 	gap: 1.2rem;
 
@@ -27,6 +26,9 @@
 	background: none;
 	border: none;
 	cursor: pointer;
+
+	display: flex;
+	justify-content: center;
 }
 
 .task svg {
@@ -42,7 +44,6 @@
 .task input[type="checkbox"] {
 	-webkit-appearance: none;
 	appearance: none;
-	margin-top: 4px;
 }
 
 .task input[type="checkbox"]::before {
